--- a/app.json
+++ b/app.json
@@ -4,13 +4,13 @@
     "slug": "VAware-App",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
+    "icon": "./assets/images/VA-logo.png",
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
     "splash": {
-      "image": "./assets/images/splash.png",
+      "image": "./assets/images/VAWARE.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#ABD9FF"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
