--- a/app.json
+++ b/app.json
@@ -7,6 +7,7 @@
     "icon": "./assets/images/VA-logo.png",
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
+    "plugins": ["@config-plugins/react-native-ble-plx"],
     "splash": {
       "image": "./assets/images/VAWARE.png",
       "resizeMode": "contain",
