--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@config-plugins/react-native-ble-plx": "^0.0.1",
     "@expo/vector-icons": "^12.0.0",
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/native": "^6.0.2",
@@ -19,6 +20,7 @@
     "expo": "~42.0.1",
     "expo-asset": "~8.3.2",
     "expo-constants": "~11.0.1",
+    "expo-dev-client": "^0.5.1",
     "expo-font": "~9.2.1",
     "expo-linking": "~2.3.1",
     "expo-splash-screen": "~0.11.2",
@@ -27,6 +29,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react-native-ble-plx": "^2.0.2",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.2.0",
